Tue Jun 16 15:35:01 1998  Havoc Pennington  <hp@pobox.com>

	* gnome-dentry-edit.h, gnome-dentry-edit.c, gnome-icon-sel.h,
	gnome-icon-sel.c: New files.
	* gnome-pixmap.h, gnome-pixmap.c (gnome_pixmap_new_from_file, 
	gnome_pixmap_new_from_file_at_size, load_file,
	gnome_pixmap_load_file, gnome_pixmap_load_file_at_size):
	const char * for filename arguments.

Sun Jun 14 13:46:09 1998  Tom Tromey  <tromey@cygnus.com>

	* Makefile.am (INCLUDES): Look in intl source and build
	directories.

Sat Jun 13 16:46:18 1998  Tom Tromey  <tromey@cygnus.com>

	* gnome-client.c (arguments): Fixed typo.

1998-06-12  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>

	* gnome-client.c: (array_insert_arg): Removed.
	(master_environment): New array.  Lists all environment variables,
 	that will set automatically to the master client.
	(gnome_client_init): Sets the environment variables listed in
 	'master_environment' and the current_directory now.
	(gnome_client_set_current_directory): Sets only one environment
 	variable instead of all.
	(client_set_prop_from_string): Include the trailing '\0' character
 	when sending strings.

	* gnome-client.h: Changed declaration of
 	'gnome_client_set_environment'.  This function now only sets one
 	environment variable and not the hole environment.
	(struct _GnomeClient): member environment now of type GList.

1998-06-10  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-calculator.c: 
	* gnome-properties.c: #include <config.h>

	* gnome-pixmap.[ch]: Removed the *old* gnome_pixmap_* functions
	that predated the GnomePixmap widget.

Wed Jun 10 21:19:25 EDT 1998 Gregory McLean <gregm@comstar.net>

	* gnome-dialog-util.c : #include <config.h> (seeing as
	we went through all the trouble of detcecting all this stuff...

1998-06-10  Raja R Harinath  <harinath@cs.umn.edu>

	* Makefile.am (EXTRA_libgnomeui_la_SOURCES): Add gnome-canva-*
	here.  These files are conditionally built.
